force-app/main/default/objects/Data_Search__mdt/Data_Search__mdt.object-meta.xml
<CustomObject>
    <description>This CM will be used to have all the search criteria&apos;s and fields to be displayed in data table</description>
    <label>Data Search</label>
    <pluralLabel>Data Search</pluralLabel>
</CustomObject>