force-app/main/default/objects/Data_Search__mdt/fields/Field_Header__c.field-meta.xml
<CustomField>
    <fullName>Field_Header__c</fullName>
    <inlineHelpText>Give the header value how it should show up in data table</inlineHelpText>
    <label>Field Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>