force-app/main/default/objects/Data_Search__mdt/fields/Field_Values__c.field-meta.xml
<CustomField>
    <fullName>Field_Values__c</fullName>
    <inlineHelpText>To put the field &amp; data type in comma separated values</inlineHelpText>
    <label>Field Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>