force-app/main/default/objects/Data_Search__mdt/fields/SOQL__c.field-meta.xml
<CustomField>
    <fullName>SOQL__c</fullName>
    <inlineHelpText>The query to be executed based on the fields provided. Ensure that fields added/removed are modified in the SOQL</inlineHelpText>
    <label>SOQL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>